--- a/realtymgmt/src/main/resources/application.properties
+++ b/realtymgmt/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/<mysql_db>
-spring.datasource.username=<mysql_username>
-spring.datasource.password=<mysql_password>
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/RealtyDB
+spring.datasource.username=realtyuser
+spring.datasource.password=Realtypasswd12#
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.smtp.host=smtp-mail.outlook.com
 mail.smtp.port=587
 
-email.address=<from_email_address>
-email.password=<from_email_password>
+email.address=ramamoorthy.periasamy@outlook.com
+email.password=Saravanan12#
