--- a/realtymgmt/src/main/resources/application.properties
+++ b/realtymgmt/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/RealtyDB
-spring.datasource.username=realtyuser
-spring.datasource.password=Realtypasswd12#
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/<db_Name>
+spring.datasource.username=<db_user_name>
+spring.datasource.password=<db_password>
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.smtp.host=smtp-mail.outlook.com
 mail.smtp.port=587
 
-email.address=ramamoorthy.periasamy@outlook.com
-email.password=Saravanan12#
+email.address=<email_address>
+email.password=<email_password>
