sign in flow added

--- a/realtymgmt/src/main/resources/application.properties
+++ b/realtymgmt/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/<db_Name>
-spring.datasource.username=<db_user_name>
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/<db_name>
+spring.datasource.username=<db_user>
 spring.datasource.password=<db_password>
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
-mail.smtp.host=smtp-mail.outlook.com
+mail.smtp.host=smtp.office365.com
 mail.smtp.port=587
 
 email.address=<email_address>
 email.password=<email_password>
+
