--- a/realtymgmt/build.gradle
+++ b/realtymgmt/build.gradle
@@ -1,27 +1,9 @@
-plugins {
-	id 'org.springframework.boot' version '2.3.0.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
-}
+subprojects {
+	group = 'com.realtymgmt'
+	version = '0.0.4-SNAPSHOT'
 
-group = 'com.realtymgmt'
-version = '0.0.3-SNAPSHOT'
-sourceCompatibility = '11'
-
-repositories {
-	mavenCentral()
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-}
-
-test {
-	useJUnitPlatform()
+	repositories {
+		mavenCentral()
+	}	
+	
 }
