--- a/realtydiscovery/src/main/resources/application.properties
+++ b/realtydiscovery/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=${PORT:8090}
 
+spring.application.name=realtydiscovery-server
+
+logging.level.org.springframework.cloud.netflix.eureka=TRACE
+
+eureka.instance.hostname=localhost
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
