--- a/realtygateway/bin/main/application.properties
+++ b/realtygateway/bin/main/application.properties
@@ -1,1 +1,5 @@
+server.port=${PORT:8100}
 
+spring.application.name=realtygateway-server
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
