--- a/ticketservice/src/main/resources/application.properties
+++ b/ticketservice/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${PORT:8082}
+
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/<db_schema>
 spring.datasource.username=<db_user>
 spring.datasource.password=<db_password>
