--- a/realtyoauth2/src/main/resources/application.properties
+++ b/realtyoauth2/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/RealtyDB
-spring.datasource.username=realtyuser
-spring.datasource.password=Realtypasswd12#
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/<db_schema>
+spring.datasource.username=<db_user>
+spring.datasource.password=<db_password>
 
 security.oauth2.client.client-id=client1
 security.oauth2.client.client-secret=client1sec
